modify app.json file and send invite link

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Modest",
     "slug": "modest-app",
     "privacy": "public",
-    "description": "Modest by Asmay online shop"
+    "description": "Modest by Asmay online shop",
+    "owner": "eddy-modest"
   }
 }
