--- a/app.json
+++ b/app.json
@@ -5,5 +5,6 @@
     "privacy": "public",
     "description": "Modest by Asmay online shop",
     "owner": "eddy-modest"
-  }
+  },
+  "assetBundlePatterns": ["**/*"]
 }
