--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "^47.0.0",
+    "expo-asset": "~8.7.0",
     "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -16,6 +18,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
