--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "@types/react": "~18.0.24",
@@ -18,11 +19,13 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.3.4",
     "react-native-web": "~0.18.7",
     "typescript": "^4.6.3"
   },
