--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^2.9.10",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-top-tabs": "^6.5.1",
@@ -17,9 +18,11 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "lottie-react-native": "5.1.4",
     "native-base": "^3.4.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.41.5",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-pager-view": "6.0.1",
@@ -30,7 +33,8 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
