--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "firebase": "^9.15.0",
     "lottie-react-native": "5.1.4",
     "native-base": "^3.4.21",
     "react": "18.1.0",
