--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^2.9.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-top-tabs": "^6.5.1",
@@ -13,6 +14,7 @@
     "axios": "^1.2.2",
     "expo": "^47.0.0",
     "expo-asset": "~8.7.0",
+    "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
@@ -38,7 +40,8 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "react-native-dotenv": "^3.4.7"
   },
   "scripts": {
     "start": "expo start",
