--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "expo": "^47.0.0",
     "expo-asset": "~8.7.0",
     "expo-constants": "~14.0.2",
@@ -40,8 +41,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "react-native-dotenv": "^3.4.7"
+    "@babel/core": "^7.19.3"
   },
   "scripts": {
     "start": "expo start",
